complete the main function

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 /Get MP3 Youtube/nbproject/private/
 /Get MP3 Youtube/build/
+/GetMP3Youtube/build/
+/GetMP3Youtube/nbproject/private/
